[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Crash/Basic.gd" type="Script" id=1]
[ext_resource path="res://Screens/crash/Component/BasicWIndow.tscn" type="PackedScene" id=2]

[node name="Basic" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InitialTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="SpamTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="Windows" type="Node2D" parent="."]
position = Vector2( 50, 50 )

[node name="BasicWindow" parent="Windows" instance=ExtResource( 2 )]
next_scene = "res://Screens/crash/cutscene1.tscn"
disabled = true

[connection signal="timeout" from="InitialTimer" to="." method="_on_InitialTimer_timeout"]
[connection signal="timeout" from="SpamTimer" to="." method="_on_SpamTimer_timeout"]
